# WaOS

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  task.yml  user_story.yml
core/: CMakeLists.txt
docs/: BACKEND_API_REQUIREMENTS.md  GUI_ARCHITECTURE.md  GUI_PANELS_SPECIFICATION.md  SJF_PRIORITY_QUEUE_MIGRATION.md
include/tests/core/: CoreMocks.h
include/waos/common/: DataStructures.h
include/waos/core/: Clock.h  Parser.h  Process.h  Simulator.h  SystemMonitor.h
include/waos/memory/: FIFOMemoryManager.h  Frame.h  IMemoryManager.h  LRUMemoryManager.h  OptimalMemoryManager.h  PageTable.h  PageTableEntry.h
include/waos/scheduler/: FCFSScheduler.h  IScheduler.h  PriorityScheduler.h  RRScheduler.h  SJFScheduler.h
src/core/: CMakeLists.txt  Clock.cpp  Parser.cpp  Process.cpp  README.md  Simulator.cpp
src/gui/: CMakeLists.txt  README.md  main.cpp
src/gui/controllers/: SimulationController.cpp  SimulationController.h
src/gui/mock/: MockDataProvider.cpp  MockDataProvider.h  MockMemoryManager.cpp  MockMemoryManager.h  MockScheduler.cpp  MockScheduler.h  MockSimulator.cpp  MockSimulator.h
src/gui/models/: FrameItemModel.cpp  FrameItemModel.h  PageTableItemModel.h  ProcessItemModel.cpp  ProcessItemModel.h
src/gui/qml/: BlockedProcesses.qml  BlockingPanel.qml  CollapsibleSection.qml  ControlPanel.qml  ExecutionLog.qml  GanttChart.qml  MemoryMonitor.qml  ProcessMonitor.qml  SettingsDialog.qml  SummaryDialog.qml  UnlockNotifications.qml  main.qml  resources.qrc
src/gui/viewmodels/: BlockingEventsViewModel.cpp  BlockingEventsViewModel.h  ExecutionLogViewModel.cpp  ExecutionLogViewModel.h  GanttViewModel.cpp  GanttViewModel.h  MemoryMonitorViewModel.cpp  MemoryMonitorViewModel.h  ProcessMonitorViewModel.cpp  ProcessMonitorViewModel.h
src/memory/: CMakeLists.txt  FIFOMemoryManager.cpp  LRUMemoryManager.cpp  OptimalMemoryManager.cpp  README.md  test_memory_main.cpp
src/scheduler/: CMakeLists.txt  FCFSScheduler.cpp  PriorityScheduler.cpp  README.md  RRScheduler.cpp  SJFScheduler.cpp  test_scheduler_main.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_Parser.cpp  test_ProcessMemory.cpp  test_SimulatorAdvanced.cpp  test_SimulatorIntegration.cpp  test_TraceGenerator.cpp
tests/memory/: CMakeLists.txt  test_FIFOMemoryManager.cpp  test_LRUMemoryManager.cpp  test_OptimalMemoryManager.cpp
tests/mock/: test_priority_processes.txt  test_processes.txt  test_rr_processes.txt  test_sjf_processes.txt
tests/scheduler/: CMakeLists.txt  test_fcfs_simulator.cpp  test_priority_simulator.cpp  test_rr_simulator.cpp  test_scheduler_main.cpp  test_sjf_simulator.cpp
